@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ChangeDishTypeUI <<presentation>>
class ChangeDishTypeController <<application>>
class DishType <<domain>>
class DishTypeRepository <<repository>>

ChangeDishTypeUI --> ChangeDishTypeController : theController
ChangeDishTypeUI ..> DishType : theDishType
ChangeDishTypeUI : doShow()
ChangeDishTypeController --> DishTypeRepository : repo
ChangeDishTypeController --> DishType : theDishType
ChangeDishTypeController : listDishTypes ()
ChangeDishTypeController : changeDishType(DishType, String)
DishType : changeDescriptionTo(String)
DishTypeRepository : save(DishType)
@enduml
